web/default/style.css
/* ... */
/* ############### end of header ############## */


/* ############### start of content ############## */
#content {
	position: fixed;
	left: 0;
	right: 0;
	overflow: auto;
	padding: 1ex; /* should be the same as body's margin */
}


/* *** help page *** */
#help dfn { /* definitions */
	text-decoration: underline;
}

#help .fields, #help .example {
	margin-left: 3em;
}

#help dt {
	font-weight: bold;
}


/* *** more page ***/
#more {
	line-height: 1.25em;
}

#more b { /* highlight matches */
	background-color: #ffff99;
}


/* *** history page *** */
table#revisions {
	/* width: 100%; */ /* table with the history info for a file */
	/* border-collapse: collapse; */ /* looks better with a small divider */
}

#revisions a.h	{ /* modified file list content */
	font-size: small;
	margin-left: 2em;
}

#revisions .filelist-hidden { /* "Hide modified files" */
	display: none;
}

#revisions tr.revtags { /* "Show revision tags" */
	display: table-row;
}

#revisions span.revtags { /* "Show revision tags" */
	display: inline;
}

#revisions tr.revtags-hidden, #revisions span.revtags-hidden { /* "Hide revision tags" */
	display: none;
}

#revisions td {
	padding: 0.5ex;
	text-align: center;
}

#revisions td:first-child {
	/* rev number - git/mercurial revs numbers look bad with prop. fonts */
	font-family: monospace;
	text-align: right;
}

#revisions td > p {
	/* log message in comment column */
	margin: 0;
	text-align: left;
}

#revisions td > div {
	/* modified file list in comment column */
	font-family: monospace;
	text-align: left;
	float: left;
}

#revisions tbody td.revtags { /* tags row */
        text-align: left;
        color: #777777;
}

.rssbadge { /* RSS/XML Feed on history page */
	text-align: right;
	margin: 1ex 0;
}


/* *** diff page *** */
#diffbar { /* diff navbar: contains the tabs to select diff format */
	margin-top: 1.5ex;
	border-bottom: 1px solid #999;
	white-space: nowrap;
}

#diffbar .d, #difftable .d {
	/* "Deleted" heading + highlight of deleted text in diff lines */
	background-color: #ffcc40;
}

#diffbar .a, #difftable .a {
	/* "Added" heading + highlight of added text in diff lines */
	background-color: #8bd98b;
}

#diffbar .legend, #diffbar .tabs, #diffbar .ctype {
	display: inline-block;
}

#diffbar .legend {
	/* bottom must be the same as .tabs span(padding-bottom) */
	margin: 0 3ex 0.75ex 1ex;
}

#diffbar .legend span, #diffbar .ctype span {
	padding: 0.2ex 1ex; /* bottom must be less than margin-bottom(.legend) */
}

#diffbar .tabs span {
	padding: 0.75ex 1ex;
	margin-left: 1ex;
	border: 1px solid #999; /* should be the same as for #diffbar above */
	border-radius: 0.75ex 0.75ex 0 00;
	-moz-border-radius: 0.75ex 0.75ex 0 00;
	background-color: #fafae0; /* navbar like */
}

#diffbar .tabs span.active, #diffbar .ctype span.active {
	background-color: #c5d5a9; /* same as for table thead */
}

#diffbar .tabs span.active {
	border-bottom-style: dashed;
}

#diffbar .ctype {
	margin-left: 3ex; /* see margin-left .legend */
}

#diffbar .ctype span {
	border: 1px solid #755; /* same as for input */
	border-radius: 0.75ex;
	-moz-border-radius: 0.75ex;
	background-color: #fafae0; /* navbar like */
	margin-left: 1ex;
}

#difftable {
	font-size: small;
}

#difftable table { /* left side == prev. rev; right side "current" rev */
	table-layout: fixed;
	border-collapse: collapse;
}

#difftable table th { /* usually both rev. have changes: eq. space for both */
	padding-top: 1ex;
	width: 50%;
}

#difftable th:last-child, #difftable td:last-child {
	border-left: 1px solid black;
}

#difftable .plain td {
	padding: 2px;
}

#difftable .image td {
	padding: 5px;
}

#difftable .k { /* border between the context and real diff lines */
	border-bottom: 1px dashed #ccc;
}


/* *** list aka xref stuff *** */

/* directory listing */
table#dirlist { /* the "Name" column */
	font-family: monospace;
	border-style: none;
	border-collapse: collapse;
}

/* The tablersorter jQuery plugin makes the header fields clickable. */
#dirlist th {
	cursor: pointer;
}

#dirlist .r, #dirlist .p {
	padding: 0;
	margin: 0 0 0 1em;
}

#dirlist td:nth-child(n+3) { /* all but the first 2 columns */
	padding-right: 1em;
}

#dirlist tbody td:nth-child(5) {
	text-align: right; /* CSS3 may allow " " (single space char) */
}

#dirlist td.q { /* 2nd column: H A D */
	white-space: nowrap;
	font-size: small;
	padding-left: 16px;
	width: 3em;
}

/* file display */
div[id^='src'] {
}

div[id^='src'] pre {
	margin: 0;
}

div[id^='src'] .l-hide, #src .hl-hide, .blame-hidden { /* hidden line number/annotation block */
	display: none
}

div[id^='src'] .l, div[id^='src'] .hl, .blame .r, .blame .a,
#results .l, #more .l,
#difftable i, del.d { /* line number/annotation block */
	display: inline-block;
	width: 6ex;
	text-align: right;
	padding-right: 0;
	background-color: #dddddd;
	color: #666;
	margin-right: .5ex;
}

.blame .search {
	/* font-size: small; */
        padding-left: .5ex;
	background-color: #dddddd;
        margin-right: .5ex;
}

div[id^='src'] .hl { /* highlighted line number */
	color: #000;
}

/* highlight line number with anchor */
div[id^='src'] a.l:target, div[id^='src'] a.hl:target {
	background: orange;
	color:yellow;
}

.blame .r { /* revision number "column" (annotation) */
	text-align: right;
}

.blame .a { /* author name "column" (annotation) */
	text-align: center;
}

/* source code highlighting - see org/opengrok/analysis/$lang/*Xref.lex */
div[id^='src'] .n		{ /* numbers/label */	color: #a52a2a; }
div[id^='src'] .s		{ /* strings */			color: green; }
div[id^='src'] .c		{ /* comment */			color: #666; }
div[id^='src'] .b		{ /* heading/title/bold */	color: #000; font-weight: bold; }
div[id^='src'] .k		{ /* block display */ 	color: #000; font-family: monospace; }
div[id^='src'] a.d	{ /* symbol definition */	color: #909; font-weight: bold; }

a.xm	{ /* macro */			color: #c66; font-weight: bold; }
a.xa	{ /* argument */		color: #60c; font-weight: bold; }
/* ... */

